--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@
 
 body { padding: 0; margin: 0; overflow-x: hidden; }
 	.wrapper { height: 3200px; overflow: hidden; display: grid; grid-template-areas: "nav" "main" "section" "footer"; 
-		grid-template-rows: 2% 30% 63% 5%; }
+		grid-template-rows: 3% 30% 62% 5%; }
 		.navegacao { grid-area: nav; }
 		.destaque { grid-area: main; }
 		.conteudo { grid-area: section; }
@@ -16,22 +16,47 @@ body { padding: 0; margin: 0; overflow-x: hidden; }
 /*Navegação-----------------------------------------------------------------------------*/
 
 .navegacao { background: #222; display: flex; font-family: 'Montserrat', sans-serif; }
-	.logo { margin-left: 1em; }
+	.logo { margin-left: 1em; position: relative; top: 20px; font-weight: 800; }
+	.logo a { text-decoration: none; color: tomato; }
 	.logo-navegacao { color: #fff; font-size: 1.7em; text-decoration: none; }
-	.navegacao-itens-lista { display: flex; }
-	.navegacao-itens-lista li { list-style: none; }
+	.texto-navegacao { color: #fff; font-size: 1.1em; border-left: 2px solid #fff;}
+	.navegacao-itens-lista { display: flex; margin-right: 12em; position: relative; 
+							left: 10%; }
+	.navegacao-itens-lista li { list-style: none; margin-right: 2em; }
 	.navegacao-itens-lista li a { text-decoration: none; color: #fff; font-size: 0.9em; 
 		margin-right: 1em; }
+	.navegacao-itens-lista li a:hover { color: tomato; }
+	.navegacao-itens { display: flex; margin-top: 1em; }
+	.lista-delivery { display: flex; }
+	.lista-delivery li { list-style: none; margin-right: 2em; }
+	.lista-delivery li a { text-decoration: none; }
+	.facebook { color: blue; }
+	.instagram { color: tomato; }
+	.whatsapp { color: lightgreen; }
+	.num-phone { color: #fff; }
 
 
 /*Fim de navegação---------------------------------------------------------------------*/
 
 /*Destaque----------------------------------------------------------------------------*/
 
-.destaque { background: url('../img/cooking_7.jpg')no-repeat center/cover; }
-
+.destaque { background: linear-gradient(rgba(0,0,0,0.8), 
+			rgba(0,0,0,0.1)),url('../img/cooking_7_red.jpg')no-repeat center/cover; clip-path: circle(66.8% at 50% 12%);}
+	.destaque-titulo { color: #fff; font-family: 'Roboto', sans-serif; margin-left: 2em;
+						 position: relative; top: 100px; font-size: 2.5em; width: 50%; }
+	.destaque-botao { border: none; background: #b22222; font-size: 1.2em; color: #fff;
+						margin-left: 4em; padding: 1em; border-radius: 30px; position: relative;
+						top: 200px; cursor: pointer; }
 /*Fim destaques-----------------------------------------------------------------------*/
 
+/*Produtos ----------------------------------------------------------------------------*/
+.secao-produto { display: flex; margin-top: 10em; }
+	.produtos-texto { width: 40%; margin-left: 7em; font-family: 'Roboto', sans-serif; }
+		.produtos-texto-titulo { font-weight: 800; }
+		.produtos-texto-paragrafo { margin-top: 5em; }
+		.cor-principal { color: tomato; }
+	.produtos-imagem { width: 40%; margin-left: 4em; }
+/*Fim produtos ------------------------------------------------------------------------*/
 
 /*Breakpoints ------------------------------------------------------------------------------------------------*/
 
