--- a/css/main.css
+++ b/css/main.css
@@ -43,10 +43,11 @@ body { padding: 0; margin: 0; overflow-x: hidden; }
 .destaque { background: linear-gradient(rgba(0,0,0,0.8), 
 			rgba(0,0,0,0.1)),url('../img/cooking_7_red.jpg')no-repeat center/cover; clip-path: circle(66.8% at 50% 12%);}
 	.destaque-titulo { color: #fff; font-family: 'Roboto', sans-serif; margin-left: 2em;
-						 position: relative; top: 100px; font-size: 2.5em; width: 50%; }
+						 position: relative; top: 100px; font-size: 2.5em; width: 50%;
+						 font-weight: 800; }
 	.destaque-botao { border: none; background: #b22222; font-size: 1.2em; color: #fff;
 						margin-left: 4em; padding: 1em; border-radius: 30px; position: relative;
-						top: 200px; cursor: pointer; }
+						top: 200px; cursor: pointer; font-weight: 700; }
 /*Fim destaques-----------------------------------------------------------------------*/
 
 /*Produtos ----------------------------------------------------------------------------*/
@@ -57,6 +58,22 @@ body { padding: 0; margin: 0; overflow-x: hidden; }
 		.cor-principal { color: tomato; }
 	.produtos-imagem { width: 40%; margin-left: 4em; }
 /*Fim produtos ------------------------------------------------------------------------*/
+
+/*Vantagens ---------------------------------------------------------------------------*/
+	.validacao-menu-itens { width: 200px; position: relative; bottom: 20px; 
+		border-right: 1px solid rgba(0,0,0,0.1); border-left: 1px solid rgba(0,0,0,0.1); }
+	.validacao-menu-itens li { list-style: none; margin-top: 1em; padding: 1em; }
+	.validacao-menu-itens li:hover { background: tomato; width: 100%; 
+		border-radius: 30px; }
+	.validacao-menu-itens li a { color: #222; list-style: none; text-align: center; 
+		text-decoration: none; }
+.secao-validacao { display: flex; margin-left: 10em; }
+	.secao-pratos-card-sup { width: 150px; display: flex; margin-left: 10em; }
+		.secao-pratos-card-sup img { height: 150px; }
+		.secao-pratos-card-sup h2 { text-align: center; font-size: 1.5em; }
+		.pratos-card { margin-right: 1em; }
+}
+/*Fim vantagens -----------------------------------------------------------------------*/
 
 /*Breakpoints ------------------------------------------------------------------------------------------------*/
 
